fix(DataTable): align items top on text wrapping

--- a/packages/styles/scss/components/data-table/_data-table.scss
+++ b/packages/styles/scss/components/data-table/_data-table.scss
@@ -123,6 +123,20 @@
     text-align: left;
     vertical-align: middle;
   }
+  .#{$prefix}--data-table.#{$prefix}--data-table--top-aligned {
+    &.#{$prefix}--data-table--lg
+      tr:not([data-child-row])
+      td:not(.#{$prefix}--table-expand),
+    &.#{$prefix}--data-table--lg th:not(.#{$prefix}--table-expand) {
+      padding-top: $spacing-05;
+      padding-bottom: $spacing-05;
+    }
+
+    th,
+    td {
+      vertical-align: top;
+    }
+  }
 
   .#{$prefix}--data-table th[align='right'],
   .#{$prefix}--data-table td[align='right'] {
@@ -586,7 +600,8 @@
 
   .#{$prefix}--data-table--xl td,
   .#{$prefix}--data-table--xl tbody tr th {
-    padding-top: 1rem;
+    padding-top: $spacing-05;
+    padding-bottom: $spacing-05;
   }
 
   .#{$prefix}--data-table--xl th,
